plugins {
    id 'java'
    id 'java-library'
    id 'idea'
}

allprojects {
    version = findProperty('version') ?: '1.0.0'
    group = findProperty('group') ?: 'io.github.kumaoji'

    configurations.all {
        resolutionStrategy {
            force 'org.aspectj:aspectjweaver:1.9.22.1'
        }
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
        toolchain { languageVersion = JavaLanguageVersion.of(25) }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['--enable-preview', '-parameters']
    }
    tasks.withType(Test).configureEach { jvmArgs += '--enable-preview' }
    tasks.withType(JavaExec).configureEach { jvmArgs += '--enable-preview' }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url = 'https://maven.aliyun.com/repository/public' }
        maven { url = 'https://repo.e-iceblue.com/nexus/content/groups/public/' }
        maven { url = 'https://releases.aspose.com/java/repo/' }
    }
}

configure(subprojects) { sub ->
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'idea'

    dependencies {

    }
}
